PAYARA-2154 Replaced sun.misc.BASE64Decoder