@@ -37,39 +37,74 @@
  * only if the new code is made subject to such option by the copyright
  * holder.
  */
-
+// Portions Copyright [2017] [Payara Foundation and/or its affiliates]
 package com.sun.enterprise.admin.remote;
 
-import com.sun.enterprise.admin.util.AdminLoggerInfo;
-import com.sun.enterprise.config.serverbeans.SecureAdmin;
-import java.io.*;
-import java.net.*;
-import java.util.*;
+import static java.nio.charset.StandardCharsets.UTF_8;
+
+import java.io.ByteArrayInputStream;
+import java.io.ByteArrayOutputStream;
+import java.io.File;
+import java.io.FileNotFoundException;
+import java.io.IOException;
+import java.io.InputStream;
+import java.io.OutputStream;
+import java.io.PrintStream;
+import java.io.UnsupportedEncodingException;
+import java.net.ConnectException;
+import java.net.HttpURLConnection;
+import java.net.InetAddress;
+import java.net.MalformedURLException;
+import java.net.SocketException;
+import java.net.SocketTimeoutException;
+import java.net.URI;
+import java.net.URL;
+import java.net.URLConnection;
+import java.net.URLEncoder;
+import java.net.UnknownHostException;
+import java.util.ArrayList;
+import java.util.Base64;
+import java.util.Iterator;
+import java.util.List;
+import java.util.Locale;
+import java.util.Map;
+import java.util.Properties;
 import java.util.logging.Level;
 import java.util.logging.Logger;
+
 import javax.net.ssl.SSLException;
+import javax.xml.parsers.DocumentBuilder;
+import javax.xml.parsers.DocumentBuilderFactory;
+import javax.xml.parsers.ParserConfigurationException;
 
-
-import org.glassfish.api.admin.*;
-import org.glassfish.api.admin.CommandModel.ParamModel;
-
-import com.sun.enterprise.universal.i18n.LocalStringsImpl;
-import com.sun.enterprise.universal.io.SmartFile;
-import com.sun.enterprise.universal.GFBase64Encoder;
-import com.sun.enterprise.admin.util.CommandModelData.ParamModelData;
-import com.sun.enterprise.admin.util.AuthenticationInfo;
-import com.sun.enterprise.admin.util.CachedCommandModel;
-import com.sun.enterprise.admin.util.HttpConnectorAddress;
-import com.sun.enterprise.admin.util.cache.AdminCacheUtils;
-import com.sun.enterprise.util.io.FileUtils;
-import com.sun.enterprise.util.net.NetUtils;
 import org.glassfish.admin.payload.PayloadFilesManager;
 import org.glassfish.admin.payload.PayloadImpl;
+import org.glassfish.api.admin.AuthenticationException;
+import org.glassfish.api.admin.CommandException;
+import org.glassfish.api.admin.CommandModel;
+import org.glassfish.api.admin.CommandModel.ParamModel;
+import org.glassfish.api.admin.CommandValidationException;
+import org.glassfish.api.admin.InvalidCommandException;
+import org.glassfish.api.admin.ParameterMap;
 import org.glassfish.api.admin.Payload;
-import javax.xml.parsers.*;
 import org.glassfish.common.util.admin.AuthTokenManager;
-import org.w3c.dom.*;
+import org.w3c.dom.Document;
+import org.w3c.dom.NamedNodeMap;
+import org.w3c.dom.Node;
+import org.w3c.dom.NodeList;
 import org.xml.sax.SAXException;
+
+import com.sun.enterprise.admin.util.AdminLoggerInfo;
+import com.sun.enterprise.admin.util.AuthenticationInfo;
+import com.sun.enterprise.admin.util.CachedCommandModel;
+import com.sun.enterprise.admin.util.CommandModelData.ParamModelData;
+import com.sun.enterprise.admin.util.HttpConnectorAddress;
+import com.sun.enterprise.admin.util.cache.AdminCacheUtils;
+import com.sun.enterprise.config.serverbeans.SecureAdmin;
+import com.sun.enterprise.universal.i18n.LocalStringsImpl;
+import com.sun.enterprise.universal.io.SmartFile;
+import com.sun.enterprise.util.io.FileUtils;
+import com.sun.enterprise.util.net.NetUtils;
 
 /**
  * Utility class for executing remote admin commands.
@@ -1065,16 +1100,18 @@ public class RemoteAdminCommand {
     /**
      * Add a password option, passing it as a header in the request
      */
-    private StringBuilder addPasswordOption(StringBuilder uriString, String name,
-            String option) throws IOException {
+    private StringBuilder addPasswordOption(StringBuilder uriString, String name, String option) throws IOException {
         if (passwordOptions == null) {
             passwordOptions = new StringBuilder();
         } else {
             passwordOptions.append(QUERY_STRING_SEPARATOR);
         }
-        GFBase64Encoder encoder = new GFBase64Encoder();
-        passwordOptions.append(name).append('=').append(
-                URLEncoder.encode(encoder.encode(option.getBytes()), "UTF-8"));
+        
+        passwordOptions
+            .append(name)
+            .append('=')
+            .append(URLEncoder.encode(new String(Base64.getMimeEncoder().encode(option.getBytes()), UTF_8), "UTF-8"));
+        
         return uriString;
     }
     
